test/Fail/Issue7136a.err
Issue7136a.agda:11.33: error: [ParseError]
Illegal pattern synonym argument  {x}
(Tactic annotations not allowed in pattern synonym arguments.)
